--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,7 @@ OptimizationMTKExt = "ModelingToolkit"
 OptimizationZygoteExt = ["Zygote", "DifferentiationInterface"]
 
 [compat]
-ADTypes = "0.2.5, 1"
+ADTypes = "1"
 ArrayInterface = "7.6"
 DocStringExtensions = "0.9"
 LinearAlgebra = "1.9, 1.10"
